--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.ts filter=lfs diff=lfs merge=lfs -text
+model_checkpoint/*.ts filter=lfs diff=lfs merge=lfs -text
 model_checkpoint/adaloops_streaming.ts filter=lfs diff=lfs merge=lfs -text
