--- a/preprocessing_env.yml
+++ b/preprocessing_env.yml
@@ -137,7 +137,7 @@ dependencies:
       - lightning==2.5.1
       - lightning-utilities==0.14.3
       - llvmlite==0.41.1
-      - maest==0.1.0
+      - git+https://github.com/palonso/MAEST.git
       - markdown==3.8
       - markdown-it-py==3.0.0
       - markdown2==2.5.3
