--- a/flg_env.yml
+++ b/flg_env.yml
@@ -1,4 +1,4 @@
-name: preprocessing_env
+name: flg_env
 channels:
   - conda-forge
   - defaults
@@ -220,4 +220,4 @@ dependencies:
       - wget==3.2
       - wrapt==1.17.2
       - yarl==1.19.0
-prefix: /preprocessing_env
+prefix: /flg_env
